active button added

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&family=Roboto+Mono:ital,wght@1,300&family=Roboto:ital,wght@0,300;0,400;0,900;1,400;1,500;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto:wght@400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto:wght@400;700;900&family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&family=Roboto+Mono:ital,wght@1,300&family=Roboto:ital,wght@0,300;0,400;0,900;1,400;1,500;1,900&display=swap');
 *{
  padding: 0%;
  margin: 0%;
@@ -68,11 +69,13 @@ nav{
         margin-bottom: 20px;
     }
 }
-.menu-items a{
+.menu-items  a{
     color: black;
     text-decoration: none;
     font-weight: bold;
+    font-family: 'Roboto';
 }
+
 .button-login-reister{
     display: flex;
     flex-wrap: wrap;
@@ -90,8 +93,15 @@ nav{
 .button-login-reister #signin{
     background-color: cadetblue;
 }
+.button-login-reister #signin:active{
+  
+     color: cadetblue;
+}
  .button-login-reister #register{
     background-color: rgb(124, 219, 175);
+}
+.button-login-reister #register:active{
+  color:  rgb(124, 219, 175);
 }
 
 /* dog section images and titles */
@@ -123,10 +133,11 @@ nav{
     flex-wrap: wrap;
     overflow-y: hidden;
 }
-.child-mainpage-titles h1{
+.child-mainpage-titles > h1{
     font-size: 2em;
     font-weight: bolder;
     font-family: 'Source Code Pro', monos;
+   
   }
 @media (min-width: 200px) and (max-width: 794px){
   .child-mainpage-titles{
@@ -144,6 +155,9 @@ nav{
     border-radius: 8px;
     text-transform:uppercase;
     cursor: pointer;
+}
+.child-mainpage-titles #exploremore:active{
+  color:  rgb(35, 141, 145);
 }
 .child-mainpage-images{
     width: auto;
@@ -318,7 +332,7 @@ nav{
     background: rgb(224,224,149);
     background: linear-gradient(90deg, rgba(224,224,149,1) 0%, rgba(236,226,160,1) 9%, rgba(197,242,169,1) 100%);
 }
-.training h3{
+.services-provide .training > h3{
     font-weight: 900;
     font-family: 'Source Code Pro', monos;
 }
@@ -371,6 +385,11 @@ nav{
     align-items: flex-start;
     flex-wrap: wrap;
 }
+@media (min-width: 480px) and (max-width: 600px){
+  .dog-quote {
+    text-align: center;
+  }
+}
 .dog-quote h4{
     font-size: 2em;
     font-weight: bolder;
@@ -378,6 +397,9 @@ nav{
 }
 .dog-quote p{
     color: grey;
+    font-size: 1em;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
 }
 .parent-dognutrients{
     width: auto;
@@ -486,9 +508,7 @@ nav{
 .discountproduct #product{
     font-family: 'Source Code Pro', monos;
    }
-/* .discountproduct span::before{
-    font-weight: bold;
-} */
+
 .discountproduct #viewmore{
     font-size: 1em;
     color: white;
@@ -499,6 +519,9 @@ nav{
     border: 2px solid;
     border-radius: 8px;
     cursor: pointer;
+}
+.discountproduct #viewmore:active{
+  color:  rgb(4, 56, 58);
 }
 .parent-drools-canin-pedigree{
     display: grid;
@@ -552,6 +575,9 @@ nav{
     color:  rgb(35, 141, 145);
     background-color: none;
 }
+.drools #buynow:active{
+   background-color: cadetblue;
+}
 /* canin div */
 .canin{
     width: auto;
@@ -587,6 +613,9 @@ nav{
     color:  rgb(35, 141, 145);
     background-color: none;
 }
+.canin #buynow:active{
+    background-color: cadetblue;
+}
 /* pedigree div */
 .pedigree{
     width: auto;
@@ -621,6 +650,9 @@ nav{
     cursor: pointer;
     color:  rgb(35, 141, 145);
     background-color: none;
+}
+.pedigree #buynow:active{
+    background-color: cadetblue;
 }
 .dog-walking{
     width: 100vw;
@@ -660,6 +692,9 @@ nav{
     border-radius: 8px;
     cursor: pointer;
 }
+.parent-dog-walking .child-dog-walking-qoute #exploremore:active{
+   color: rgb(4, 56, 58);
+}
 .child-dog-walking{
     width: auto;
     height: auto;
@@ -674,8 +709,10 @@ nav{
 }
 /* happy customer section */
 .happy-customer{
- position: relative;
- left: 10%;
+display: flex;
+flex-direction: column;
+align-items: center;
+flex-wrap: wrap;
 }
 .happy-customer h9{
     font-size: 2em;
@@ -812,6 +849,9 @@ font-size: 1em;
     border-radius: 8px;
     cursor: pointer;
 }
+.explore-more-section #exploremore:active{
+   color: rgb(4, 56, 58);
+}
 /* image carousel sections */
 .image-gallery {
     width: 100vw;
@@ -828,30 +868,37 @@ font-size: 1em;
     margin-top: 2em;
     margin-bottom: 2em;
 }
-
+@media (min-width: 300px) and (max-width: 479px){
+    .healthypets{
+             text-align: center;
+             font-size: 1.5em;
+     }
+   }
+@media (min-width: 400px) and (max-width: 520px){
+ .healthypets{
+          text-align: center;
+  }
+}
 footer{
     width: 100vw;
     height: auto;
-    background-color:  rgb(35, 141, 145);
+    background-color: rgb(104 178 181);
     margin-top: 10em;
 }
 /* footer company logo */
 .footer-company-logo{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    padding-left: 10em;
-    padding-right: 10em;
     margin-top: 5em;
 }
-/* footer company logo media query */
-@media (min-width: 320px) and (max-width: 480px){
-    .footer-logo{
-        padding-right: 0% !important;
-        display: block !important;
-        height: auto !important;
-        width: 100vw !important;
+/* footer company logo media query */ 
+@media (min-width: 320px) and (max-width: 479px){
+    .footer-company-logo{
+        display: flex !important;
+        flex-direction: column !important;
+        flex-wrap: wrap !important;
     }
 }
 @media (min-width: 320px) and (max-width: 479px){
@@ -872,6 +919,7 @@ footer{
 @media (min-width: 320px) and (max-width: 479px){
     .social-icon{
      display: flex !important;
+     flex-direction: column !important;
      margin-top: 2em;
      align-items: center !important;
      justify-content: flex-start !important;
@@ -896,7 +944,56 @@ footer{
 .footer-logo img{
   background-color: white;
 }
+.email{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5em;
+}
+.email input{
+    text-align: center;
+    font-size: 1em;
+    padding: .3em;
+    border: opx solid white;
+    border-radius: 5px 5px 5px 5px;
+    font-family: 'Roboto', sans-serif;
+    outline: none;
+}
 
+.email button{
+    text-align: center;
+    font-size: 1em;
+    padding: .3em;
+    border: 1px solid rgb(143 124 219);
+    border-radius: 5px 5px 5px 5px;
+    font-family: 'Source Code Pro', monos;
+    background-color:rgb(143 124 219);
+    color: #fff;
+    outline: none;
+    font-family: 'Roboto', sans-serif;
+    outline: none;
+    cursor: pointer;
+  
+}
+.email button:active{
+color:rgb(143 124 219);
+}
+@media (min-width: 320px) and (max-width: 479px){
+    .email{
+      display: block !important;
+      margin-top: 1em;
+    }
+ }
+ @media (min-width: 320px) and (max-width: 479px){
+    .email button{
+      display: block !important;
+      margin-top: 1em;
+    }
+ }
+@media (min-width: 480px) and (max-width: 660px){
+   .email{
+     margin-top: 1em;
+   }
+}
 /* footer social icons */
 .social-icon{
     display: flex;
@@ -958,7 +1055,7 @@ font-weight: 500;
 font-family: 'Roboto', sans-serif;
 }
 .footer-list ul li a{
-color: silver;
+color: #fff;
 text-decoration: none;
 font-size: 1.2em;
 font-weight: 500;
